--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <title>Vinícius Alvino</title>
 </head>
-<body class="darkmode">
+<body class="">
     <header>
         <div id="bt">
         <label class="theme-switch">
