--- a/Index.html
+++ b/Index.html
@@ -141,11 +141,11 @@
     </section>
     </div>
     <div class="espaço"></div>
-    <section id="servicos">
-
+    <section id="servicos" class="escondido">
+       <img src="/IMAGE" alt="" >
       <div class="bg">
-        <h1>Serviços Oferecidos</h1>
-        <div id="servicos-1">
+        <h1 id="titulo-servicos">Serviços Oferecidos</h1>
+        <div id="servicos-1" class="quadrado-div escondido-tri">
           <h3><span>1.</span>Desenvolvimento de Sites</h3>
           <p>
             Criação de sites personalizados,
@@ -155,14 +155,14 @@
           </p>
         </div>
 
-        <div id="servicos-2">
+        <div id="servicos-2" class="quadrado-div escondido-tri">
           <h3><span>2.</span>Design Web</h3>
           <p>
             Construção de layout, aparencia e interação ao usuário.
           </p>
         </div>
 
-        <div id="servicos-3">
+        <div id="servicos-3" class="escondido-tri">
           <h3><span>3.</span>Consultoria Web</h3>
           <p>
             Orientação e suporte técnico para empresas que desejam melhorar seus sites,
