--- a/Index.html
+++ b/Index.html
@@ -77,6 +77,7 @@
 
       </ul>
     </nav>
+    <div class="lineheader"></div>
   </header>
   <main>
     <article>
@@ -104,7 +105,7 @@
               outras tecnologias relevantes
               para o desenvolvimento web.</p>
           </div>
-          <div class="bg escondido-tri">
+          <div class="bg escondido-tri2">
             <h3>Design</h3>
             <p class="detalhes">
               Experiência em design
@@ -113,7 +114,7 @@
               uso de ferramentas de design
               como Figma e Adobe XD.</p>
           </div>
-          <div class="bg escondido-tri">
+          <div class="bg escondido-tri3">
             <h3>Outras Habilidades</h3>
             <p class="detalhes">
               Conhecimento em PHP,
@@ -144,7 +145,7 @@
     <section id="servicos" class="escondido">
       <div class="bg">
         <h1 id="titulo-servicos">Serviços Oferecidos</h1>
-        <div id="servicos-1" class="quadrado-div escondido-tri">
+        <div id="servicos-1" class="quadrado-div escondido-tri servicos-item">
           <h3><span>1.</span>Desenvolvimento de Sites</h3>
           <p>
             Criação de sites personalizados,
@@ -154,14 +155,14 @@
           </p>
         </div>
 
-        <div id="servicos-2" class="quadrado-div escondido-tri">
+        <div id="servicos-2" class="quadrado-div escondido-tri2 servicos-item" >
           <h3><span>2.</span>Design Web</h3>
           <p>
             Construção de layout, aparencia e interação ao usuário.
           </p>
         </div>
 
-        <div id="servicos-3" class="escondido-tri">
+        <div id="servicos-3" class="escondido-tri2 servicos-item">
           <h3><span>3.</span>Consultoria Web</h3>
           <p>
             Orientação e suporte técnico para empresas que desejam melhorar seus sites,
