--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,8 @@
 
       </ul>
     </nav>
-    <div class="lineheader"></div>
+    <div class="lineheader" id="lineheader"></div>
+ <script src="JS/scrollline.js"></script>
   </header>
   <main>
     <article>
