--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,7 @@
             que oferecem
             experiências excepcionais aos usuários.
           </p>
-          <button type="button" class="botao escondido"><a href="#projetos">Ver projetos</a></button>
+          <a href="#projetos"> <button type="button" class="botao escondido" id="btnprojetos">Ver projetos</button></a>
         </div>
 
       </section>
