--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="CSS/mediastyle.css">
   <link rel="stylesheet" href="CSS/styledark.css">
   <link rel="stylesheet" href="CSS/style.css">
   <title>Vinícius Alvino</title>
