--- a/Index.html
+++ b/Index.html
@@ -162,7 +162,7 @@
           </p>
         </div>
 
-        <div id="servicos-3" class="escondido-tri2 servicos-item">
+        <div id="servicos-3" class="escondido-tri2 servicos-item retagulo-div">
           <h3><span>3.</span>Consultoria Web</h3>
           <p>
             Orientação e suporte técnico para empresas que desejam melhorar seus sites,
