--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="IMAGE/image.png" type="image/x-icon">
+  <link rel="styledark" href="CSS/styledark.css">
   <link rel="stylesheet" href="CSS/styledark.css">
   <link rel="stylesheet" href="CSS/style.css">
   <title>Vinícius Alvino</title>
 </head>
-
 <body class="darkmode">
   <header>
     <div id="bt">
