--- a/Index.html
+++ b/Index.html
@@ -135,9 +135,15 @@
     <section class="amostras" id="projetos">
       <h1 class="titulo">Projetos</h1>
       <div>
-        <img src="IMAGE/macbook-pro-and-iphone-15-pro-mockup-668d797c8d5ba3076d5b5b6d-@2x.png"
-          alt="imagem do site sobre academia" srcset="" class="escondido">
-        <img src="IMAGE/macbook-pro-and-iphone-15-2.png" alt="imagem do site sobre Café" class="escondido">
+        <div id="bg">
+          <img src="IMAGE/macbook-pro-and-iphone-15-pro-mockup-668d797c8d5ba3076d5b5b6d-@2x.png"
+            alt="imagem do site sobre academia" srcset="" class="escondido">
+            <a href="/Ares.html"> <button type="button" class="botao escondido" id="btnprojetos">Ver projeto</button></a>
+        </div>
+       <div id="bg">
+          <img src="IMAGE/macbook-pro-and-iphone-15-2.png" alt="imagem do site sobre Café" class="escondido">
+          <a href="/Bompravoce.html"> <button type="button" class="botao escondido" id="btnprojetos">Ver projeto</button></a>
+       </div>
     </section>
     </div>
     <div class="espaço"></div>
