--- a/Index.html
+++ b/Index.html
@@ -238,7 +238,7 @@
           </div>
         </div>
         <div class="cp">
-          <sub>Copyright© Vinícius Alvino</sub>
+          <sub>Copyright© 2024 Vinícius Alvino</sub>
         </div>
   </footer>
   <div class="lineheader" id="lineheader"></div>
