--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,7 @@
             que oferecem
             experiências excepcionais aos usuários.
           </p>
-          <a href="#projetos"> <button type="button" class="botao escondido" id="btnprojetos">Ver projetos</button></a>
+          <a href="#projetos"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver projetos</button></a>
         </div>
 
       </section>
@@ -138,11 +138,11 @@
         <div id="bg">
           <img src="IMAGE/macbook-pro-and-iphone-15-pro-mockup-668d797c8d5ba3076d5b5b6d-@2x.png"
             alt="imagem do site sobre academia" srcset="" class="escondido">
-            <a href="/Ares.html"> <button type="button" class="botao escondido" id="btnprojetos">Ver projeto</button></a>
+            <a href="/Ares.html"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver projeto</button></a>
         </div>
        <div id="bg">
           <img src="IMAGE/macbook-pro-and-iphone-15-2.png" alt="imagem do site sobre Café" class="escondido">
-          <a href="/Bompravoce.html"> <button type="button" class="botao escondido" id="btnprojetos">Ver projeto</button></a>
+          <a href="/Bompravoce.html"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver projeto</button></a>
        </div>
     </section>
     </div>
