--- a/Bompravoce.html
+++ b/Bompravoce.html
@@ -3,29 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/stylebpc.css">
+    <link rel="stylesheet" href="CSS/stylebpv.css">
     <title>Bom pra voce</title>
 </head>
 <body>
+    <header>
+        <img src="" alt="logotipo">
+    </header>
     <main>
        <article id="first">
-           <section>
-                <h1>Supermercado Bom Pra Você</h1>
-                <p class="detalhes">Bem-vindo ao Supermercado Bom Pra Você, onde você encontra tudo o que precisa para o seu dia a dia com comodidade e preços acessíveis.</p>
+           <section class="double">
+                <div>
+                    <h1>Supermercado Bom Pra Você</h1>
+                    <p class="detalhes">Bem-vindo ao Supermercado Bom Pra Você, onde você encontra tudo o que precisa para o seu dia a dia com comodidade e preços acessíveis.</p>
+                </div>
+                <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
            </section>
-           <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
-           <section class="tri-flex">
-             <div class="bg">
-                <h1>Alimentos</h1>
-                <p>Encontre uma ampla seleção de frutas, legumes, grãos, laticínios e muito mais, com qualidade e frescor.</p>
-             </div>
-             <div class="bg">
-                <h1>Bebidas</h1>
-                <p>Refresque-se com nossas opções de sucos, refrigerantes, cervejas e vinhos selecionados.</p>
-             </div>
-             <div class="bg">
-                <h1>HIgiene e Beleza</h1>
-                <p>Cuide de você e da sua família com nossos produtos de higiene pessoal e cosméticos.</p>
+           
+           <section  id="Categorias">
+            <h1>Categorias de produtos</h1>
+             <div class="tri-flex">
+                 <div class="bg">
+                    <h3>Alimentos</h3>
+                    <p>Encontre uma ampla seleção de frutas, legumes, grãos, laticínios e muito mais, com qualidade e frescor.</p>
+                 </div>
+                 <div class="bg">
+                    <h3>Bebidas</h3>
+                    <p>Refresque-se com nossas opções de sucos, refrigerantes, cervejas e vinhos selecionados.</p>
+                 </div>
+                 <div class="bg">
+                    <h3>HIgiene e Beleza</h3>
+                    <p>Cuide de você e da sua família com nossos produtos de higiene pessoal e cosméticos.</p>
+                 </div>
              </div>
        </article>
        <article id="second">
