--- a/Bompravoce.html
+++ b/Bompravoce.html
@@ -32,7 +32,7 @@
                     <p>Refresque-se com nossas opções de sucos, refrigerantes, cervejas e vinhos selecionados.</p>
                  </div>
                  <div class="bg">
-                    <h3>HIgiene e Beleza</h3>
+                    <h3>Higiene e Beleza</h3>
                     <p>Cuide de você e da sua família com nossos produtos de higiene pessoal e cosméticos.</p>
                  </div>
              </div>
