--- a/Bompravoce.html
+++ b/Bompravoce.html
@@ -16,6 +16,8 @@
                 <div>
                     <h1>Supermercado Bom Pra Você</h1>
                     <p class="detalhes">Bem-vindo ao Supermercado Bom Pra Você, onde você encontra tudo o que precisa para o seu dia a dia com comodidade e preços acessíveis.</p>
+                    <br>
+                    <a href="#" id="saibamais">Saiba mais</a>
                 </div>
                 <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
            </section>
@@ -39,35 +41,47 @@
        </article>
        <article id="second">
         <section>
-            <h1>Ofertas e Promoções</h1>
-            <p>
-                Confira nossas melhores ofertas e promoções do momento!
-            </p>
-            <button class="btnfundo"><a href="http://"></a>Aproveite Agora</button>
-            <button class="btnsemfundo"><a href="http://"></a>Baixe o Panfleto</button>
+            <div>
+                <h1>Ofertas e Promoções</h1>
+                <p>
+                    Confira nossas melhores ofertas e promoções do momento!
+                </p>
+               <a href="http://">
+                   <button class="btnfundo">Aproveite Agora</button>
+               </a>
+                <a href="IMAGE/-0D0e5YAryLezjs0.jpg" download="meu-arquivo">
+                    <button class="btnsemfundo">Baixe o Panfleto</button>
+                </a>
+            </div>
+            <aside>
+            </aside>
         </section>
-        <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
+        
        </article>
        <article id="third">
-        <section>
-            <h1>Produtos em Destaque</h1>
-                <div>
-                    <h3>Frutas e Legume
-                    </h3>
-                    <p>Nosso setor de hortifruti oferece os melhores e mais frescos produtos da região.</p>
-                </div>
-                <div>
-                    <h3>Laticínios</h3>
-                    <p>Encontre queijos, iogurtes e leites de alta qualidade, ideais para o seu dia a dia.</p>
-                </div>
-                <div>
-                    <h3>Carnes e Peixes</h3>
-                    <p>Cortes selecionados de carnes e variedade de peixes frescos, tudo com a qualidade que você merece.</p>
-                </div>
-                <div>
-                    <h3>Mercearia</h3>
-                    <p>Ampla seleção de grãos, massas, conservas e muito mais para sua despensa.</p>
-                </div>
+        <section id="Destaque">
+            <div class="blur">
+                <h1>Produtos em Destaque</h1>
+                    <div class="principal-bg">
+                        <div class="bg" id="um">
+                            <h3>Frutas e Legume
+                            </h3>
+                            <p>Nosso setor de hortifruti oferece os melhores e mais frescos produtos da região.</p>
+                        </div>
+                        <div class="bg" id="dois">
+                            <h3>Laticínios</h3>
+                            <p>Encontre queijos, iogurtes e leites de alta qualidade, ideais para o seu dia a dia.</p>
+                        </div>
+                        <div class="bg" id="tres">
+                            <h3>Carnes e Peixes</h3>
+                            <p>Cortes selecionados de carnes e variedade de peixes frescos, tudo com a qualidade que você merece.</p>
+                        </div>
+                        <div class="bg" id="quatro">
+                            <h3>Mercearia</h3>
+                            <p>Ampla seleção de grãos, massas, conservas e muito mais para sua despensa.</p>
+                        </div>
+                    </div>
+            </div>
         </section>
         <section>
             <h1>Atendimento</h1>
