--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
     <nav>
       <div class="burger-icon">
         <label class="burger" for="burger">
-          <input class="line" type="checkbox" id="burger" onclick="toggleMenu()" />
+          <input class="line" type="checkbox" id="burger" onclick="toggleMenu()" style="display: none;"/>
         </label>
       </div>
       <ul class="nav-link" id="nav-link">
