--- a/Index.html
+++ b/Index.html
@@ -36,10 +36,10 @@
         </div>
       </label>
     </div>
-    <nav>
+    <nav  style="display: none;">
       <div class="burger-icon">
         <label class="burger" for="burger">
-          <input class="line" type="checkbox" id="burger" onclick="toggleMenu()" style="display: none;"/>
+          <input class="line" type="checkbox" id="burger" onclick="toggleMenu()"/>
         </label>
       </div>
       <ul class="nav-link" id="nav-link">
