--- a/Index.html
+++ b/Index.html
@@ -87,6 +87,7 @@
             que oferecem
             experiências excepcionais aos usuários.
           </p>
+          <br>
           <a href="#projetos"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver projetos</button></a>
         </div>
 
@@ -193,7 +194,7 @@
       <h4>O SEU SITE COM CAPRICHO!</h4>
     </div>
     <!--Copyright - 2024 Lokesh1379 (C Lokesh)  -->
-    <div>
+    <div class="redes">
       <div class="parent">
         <div class="child child-1">
           <button class="button btn-2"><a href="" target="_blank" rel="noopener noreferrer">
@@ -237,6 +238,7 @@
             </div>
           </div>
         </div>
+      </div>
         <div class="cp">
           <sub>Copyright© 2024 Vinícius Alvino</sub>
         </div>
