calculadora de valores

--- a/Index.html
+++ b/Index.html
@@ -88,7 +88,14 @@
             experiências excepcionais aos usuários.
           </p>
           <br>
-          <a href="#projetos"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver projetos</button></a>
+          <a href="#projetos"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver projetos</button>
+          </a>
+
+          <a href="calculo.html">
+            <button class="botao escondido acao semfundo">
+              Valores
+            </button>
+          </a>
         </div>
 
       </section>
@@ -197,7 +204,7 @@
     <div class="redes">
       <div class="parent">
         <div class="child child-1">
-          <button class="button btn-2"><a href="" target="_blank" rel="noopener noreferrer">
+          <button class="button btn-2"><a href="https://api.whatsapp.com/send?phone=5561983394560" target="_blank" rel="noopener noreferrer">
               <svg viewBox="0 0 16 16" class="bi bi-whatsapp" fill="currentColor" height="1.2em"
                 xmlns="http://www.w3.org/2000/svg" style="color: rgb(3, 219, 3)">
                 <path fill="green"
