--- a/Index.html
+++ b/Index.html
@@ -91,7 +91,7 @@
           <a href="#projetos"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver projetos</button>
           </a>
 
-          <a href="calculo.html">
+          <a href="calculadora.html">
             <button class="botao escondido acao semfundo">
               Valores
             </button>
