--- a/Bompravoce.html
+++ b/Bompravoce.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="logotipo">
+        <img src="IMAGE/logotipo.jpg" alt="logotipo" id="logotipo">
     </header>
     <main>
        <article id="first">
@@ -41,20 +41,22 @@
        </article>
        <article id="second">
         <section>
-            <div>
-                <h1>Ofertas e Promoções</h1>
-                <p>
-                    Confira nossas melhores ofertas e promoções do momento!
-                </p>
-               <a href="http://">
-                   <button class="btnfundo">Aproveite Agora</button>
-               </a>
-                <a href="IMAGE/-0D0e5YAryLezjs0.jpg" download="meu-arquivo">
-                    <button class="btnsemfundo">Baixe o Panfleto</button>
-                </a>
+            <div class="bg">
+                <div>
+                    <h1>Ofertas e Promoções</h1>
+                    <p>
+                        Confira nossas melhores ofertas e promoções do momento!
+                    </p>
+                   <a href="http://">
+                       <button class="btnfundo">Aproveite Agora</button>
+                   </a>
+                    <a href="IMAGE/-0D0e5YAryLezjs0.jpg" download="meu-arquivo">
+                        <button class="btnsemfundo">Baixe o Panfleto</button>
+                    </a>
+                </div>
+                <aside>
+                </aside>
             </div>
-            <aside>
-            </aside>
         </section>
         
        </article>
