--- a/calculadora.html
+++ b/calculadora.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Calculadora de Preço de Desenvolvimento de Site</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/calculadorastyle.css">
 </head>
 <body>
     <div class="container">
