--- a/Bompravoce.html
+++ b/Bompravoce.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/stylebpv.css">
+    <link rel="shortcut icon" href="/IMAGE/logotipo.jpg" type="image/x-icon">
     <title>Bom pra voce</title>
 </head>
 <body>
