--- a/Bompravoce.html
+++ b/Bompravoce.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,64 +8,67 @@
     <link rel="shortcut icon" href="/IMAGE/logotipo.jpg" type="image/x-icon">
     <title>Bom pra voce</title>
 </head>
+
 <body>
     <header>
         <img src="IMAGE/logotipo.jpg" alt="logotipo" id="logotipo">
     </header>
     <main>
-       <article id="first">
-           <section class="double">
+        <article id="first">
+            <section class="double">
                 <div>
                     <h1>Supermercado Bom Pra Você</h1>
-                    <p class="detalhes">Bem-vindo ao Supermercado Bom Pra Você, onde você encontra tudo o que precisa para o seu dia a dia com comodidade e preços acessíveis.</p>
+                    <p class="detalhes">Bem-vindo ao Supermercado Bom Pra Você, onde você encontra tudo o que precisa
+                        para o seu dia a dia com comodidade e preços acessíveis.</p>
                     <br>
                     <a href="#" id="saibamais">Saiba mais</a>
                 </div>
                 <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
-           </section>
-           
-           <section  id="Categorias">
-            <h1>Categorias de produtos</h1>
-             <div class="tri-flex">
-                 <div class="bg">
-                    <h3>Alimentos</h3>
-                    <p>Encontre uma ampla seleção de frutas, legumes, grãos, laticínios e muito mais, com qualidade e frescor.</p>
-                 </div>
-                 <div class="bg">
-                    <h3>Bebidas</h3>
-                    <p>Refresque-se com nossas opções de sucos, refrigerantes, cervejas e vinhos selecionados.</p>
-                 </div>
-                 <div class="bg">
-                    <h3>Higiene e Beleza</h3>
-                    <p>Cuide de você e da sua família com nossos produtos de higiene pessoal e cosméticos.</p>
-                 </div>
-             </div>
-       </article>
-       <article id="second">
-        <section>
-            <div class="bg">
-                <div>
-                    <h1>Ofertas e Promoções</h1>
-                    <p>
-                        Confira nossas melhores ofertas e promoções do momento!
-                    </p>
-                   <a href="http://">
-                       <button class="btnfundo">Aproveite Agora</button>
-                   </a>
-                    <a href="IMAGE/-0D0e5YAryLezjs0.jpg" download="meu-arquivo">
-                        <button class="btnsemfundo">Baixe o Panfleto</button>
-                    </a>
+            </section>
+
+            <section id="Categorias">
+                <h1>Categorias de produtos</h1>
+                <div class="tri-flex">
+                    <div class="bg">
+                        <h3>Alimentos</h3>
+                        <p>Encontre uma ampla seleção de frutas, legumes, grãos, laticínios e muito mais, com qualidade
+                            e frescor.</p>
+                    </div>
+                    <div class="bg">
+                        <h3>Bebidas</h3>
+                        <p>Refresque-se com nossas opções de sucos, refrigerantes, cervejas e vinhos selecionados.</p>
+                    </div>
+                    <div class="bg">
+                        <h3>Higiene e Beleza</h3>
+                        <p>Cuide de você e da sua família com nossos produtos de higiene pessoal e cosméticos.</p>
+                    </div>
                 </div>
-                <aside>
-                </aside>
-            </div>
-        </section>
-        
-       </article>
-       <article id="third">
-        <section id="Destaque">
-            <div class="blur">
-                <h1>Produtos em Destaque</h1>
+        </article>
+        <article id="second">
+            <section>
+                <div class="bg">
+                    <div>
+                        <h1>Ofertas e Promoções</h1>
+                        <p>
+                            Confira nossas melhores ofertas e promoções do momento!
+                        </p>
+                        <a href="http://">
+                            <button class="btnfundo">Aproveite Agora</button>
+                        </a>
+                        <a href="IMAGE/-0D0e5YAryLezjs0.jpg" type="application/pdf" download="Panfleto">
+                            <button class="btnsemfundo">Baixe o Panfleto</button>
+                        </a>
+                    </div>
+                    <aside>
+                    </aside>
+                </div>
+            </section>
+
+        </article>
+        <article id="third">
+            <section id="Destaque">
+                <div class="blur">
+                    <h1>Produtos em Destaque</h1>
                     <div class="principal-bg">
                         <div class="bg" id="um">
                             <h3>Frutas e Legume
@@ -77,87 +81,101 @@
                         </div>
                         <div class="bg" id="tres">
                             <h3>Carnes e Peixes</h3>
-                            <p>Cortes selecionados de carnes e variedade de peixes frescos, tudo com a qualidade que você merece.</p>
+                            <p>Cortes selecionados de carnes e variedade de peixes frescos, tudo com a qualidade que
+                                você merece.</p>
                         </div>
                         <div class="bg" id="quatro">
                             <h3>Mercearia</h3>
                             <p>Ampla seleção de grãos, massas, conservas e muito mais para sua despensa.</p>
                         </div>
                     </div>
-            </div>
-        </section>
-        <section>
-            <h1>Atendimento</h1>
-            <div>
-                <img src="" alt="icone aperto de mão">
-                <h3>Atendimento Cordial</h3>
-                <p>Nossa equipe está pronta para atendê-lo com simpatia e eficiência.</p>
-            </div>
-            <div>
-                <img src="" alt="icone relogio">
-                <h3>Horário Flexível</h3>
-                <p>Estamos abertos das 7h às 22h, todos os dias, para sua conveniência.</p>
-            </div>
-        </section>
-       </article>
-       <article>
-        <section>
-            <h1>Sobre Nós</h1>
-            <div>
-                <button class="setaparaolado"></button>
-                <div><p>Uma historia de sucesso</p></div>
-                <div><p>O Supermercado Bom Pra Você é uma empresa familiar com mais de 20 anos de experiência no mercado. Sempre buscamos oferecer os melhores produtos e serviços aos nossos clientes, com foco na qualidade, frescor e preços acessíveis.</p></div>
-            </div>
-            <div>
-                <button class="setaparaolado"></button>
-                <div><p>Nosso Compromisso</p></div>
-                <div> 
-                    <ul>
-                        <li>Atendimento personalizado e eficiente</li>
-                        <li>Variedade de produtos frescos e de qualidade</li>
-                        <li>Promoções e descontos frequentes</li>
-                        <li>Preocupação com a sustentabilidade e o meio ambiente</li>
-                    </ul>
                 </div>
-            </div>
-            <div>
-                <button class="setaparaolado"></button>
-                <div><p>Venha nos conhecer</p>
+            </section>
+            <section>
+                <h1>Atendimento</h1>
+                <div>
+                    <img src="" alt="icone aperto de mão">
+                    <h3>Atendimento Cordial</h3>
+                    <p>Nossa equipe está pronta para atendê-lo com simpatia e eficiência.</p>
                 </div>
-                <div><p>Visite uma de nossas lojas e descubra por que somos o supermercado preferido da sua região. Estamos ansiosos para recebê-lo!</p></div>
-            </div>
-        </section>
-        <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
-        <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
-        <section>
-            <h1>Telefone</h1>
-            <a href="tel:+55(61)985479055"></a>
-            <h1>E-mail</h1>
-            <a href="mailto:"></a>
-            <h1>Endereço</h1>
-            <address></address>
-        </section>
-       </article>
+                <div>
+                    <img src="" alt="icone relogio">
+                    <h3>Horário Flexível</h3>
+                    <p>Estamos abertos das 7h às 22h, todos os dias, para sua conveniência.</p>
+                </div>
+            </section>
+        </article>
+        <article>
+            <section>
+                <h1>Sobre Nós</h1>
+                <div>
+                    <button class="setaparaolado"></button>
+                    <div>
+                        <p>Uma historia de sucesso</p>
+                    </div>
+                    <div>
+                        <p>O Supermercado Bom Pra Você é uma empresa familiar com mais de 20 anos de experiência no
+                            mercado. Sempre buscamos oferecer os melhores produtos e serviços aos nossos clientes, com
+                            foco na qualidade, frescor e preços acessíveis.</p>
+                    </div>
+                </div>
+                <div>
+                    <button class="setaparaolado"></button>
+                    <div>
+                        <p>Nosso Compromisso</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>Atendimento personalizado e eficiente</li>
+                            <li>Variedade de produtos frescos e de qualidade</li>
+                            <li>Promoções e descontos frequentes</li>
+                            <li>Preocupação com a sustentabilidade e o meio ambiente</li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <button class="setaparaolado"></button>
+                    <div>
+                        <p>Venha nos conhecer</p>
+                    </div>
+                    <div>
+                        <p>Visite uma de nossas lojas e descubra por que somos o supermercado preferido da sua região.
+                            Estamos ansiosos para recebê-lo!</p>
+                    </div>
+                </div>
+            </section>
+            <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
+            <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
+            <section>
+                <h1>Telefone</h1>
+                <a href="tel:+55(61)985479055"></a>
+                <h1>E-mail</h1>
+                <a href="mailto:"></a>
+                <h1>Endereço</h1>
+                <address></address>
+            </section>
+        </article>
     </main>
     <footer>
-     <h1></h1>
-     <div>
-        <img src="" alt="">
-        <p>Whatsapp</p>
-        <a href="http://">(61) 985479055</a>
-     </div>
-     <div>
-        <img src="" alt="">
-        <p>Instagram</p>
-        <a href="http://">@Bompravoce</a>
-     </div>
-     <div>
-        <img src="" alt="">
-        <p>Facebook</p>
-        <a href="http://">Bompravoce</a>
-     </div>
-     <p>Acompanhe nossas novidades, promoções e dicas nas nossas redes sociais!</p>
-     <sub>Copyright© 2024 Vinícius Alvino</sub>
+        <h1></h1>
+        <div>
+            <img src="" alt="">
+            <p>Whatsapp</p>
+            <a href="http://">(61) 985479055</a>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Instagram</p>
+            <a href="http://">@Bompravoce</a>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Facebook</p>
+            <a href="http://">Bompravoce</a>
+        </div>
+        <p>Acompanhe nossas novidades, promoções e dicas nas nossas redes sociais!</p>
+        <sub>Copyright© 2024 Vinícius Alvino</sub>
     </footer>
 </body>
+
 </html>
