--- a/Bompravoce.html
+++ b/Bompravoce.html
@@ -45,7 +45,7 @@
                 </div>
         </article>
         <article id="second">
-            <section>
+            <section id="ofertas">
                 <div class="bg">
                     <div>
                         <h1>Ofertas e Promoções</h1>
@@ -91,90 +91,128 @@
                     </div>
                 </div>
             </section>
-            <section>
-                <h1>Atendimento</h1>
-                <div>
-                    <img src="" alt="icone aperto de mão">
-                    <h3>Atendimento Cordial</h3>
-                    <p>Nossa equipe está pronta para atendê-lo com simpatia e eficiência.</p>
-                </div>
-                <div>
-                    <img src="" alt="icone relogio">
-                    <h3>Horário Flexível</h3>
-                    <p>Estamos abertos das 7h às 22h, todos os dias, para sua conveniência.</p>
+            <section class="atend">
+
+                <div class="bg bg-atend">
+                    <div id="header">
+                        <h1>Atendimento</h1>
+                    </div>
+                    <div>
+                        <div class="relogio">
+                            <div class="linerv"></div>
+                            <div class="liner"></div>
+                        </div>
+                        <div class="apertodemao">
+                        </div id="Atendimento">
+                        <h3>Atendimento Cordial</h3>
+                        <p>Nossa equipe está pronta para atendê-lo com simpatia e eficiência.</p>
+                    </div>
+                    <div id="horario">
+                        <div class="relogio">
+                            <div class="linerv"></div>
+                            <div class="liner"></div>
+                        </div>
+                        <h3>Horário Flexível</h3>
+                        <p>Estamos abertos das 7h às 22h, todos os dias, para sua conveniência.</p>
+                    </div>
                 </div>
             </section>
         </article>
         <article>
-            <section>
-                <h1>Sobre Nós</h1>
-                <div>
-                    <button class="setaparaolado"></button>
-                    <div>
-                        <p>Uma historia de sucesso</p>
+            <section id="sobre">
+                <div class="bgs">
+                    <div id="headersobre">
+                        <h1>Sobre Nós</h1>
                     </div>
-                    <div>
-                        <p>O Supermercado Bom Pra Você é uma empresa familiar com mais de 20 anos de experiência no
-                            mercado. Sempre buscamos oferecer os melhores produtos e serviços aos nossos clientes, com
-                            foco na qualidade, frescor e preços acessíveis.</p>
+                    <div class="container" id="container">
+                        <div class="arrow" id="arrow1">▶ Uma historia de sucesso</div>
+                        <div class="content" id="content1">
+                            <div class="line-vertical"></div>
+                            <div class="bgi">
+                                <p>O Supermercado Bom Pra Você é uma empresa familiar com mais de 20 anos de experiência
+                                    no
+                                    mercado. Sempre buscamos oferecer os melhores produtos e serviços aos nossos
+                                    clientes,
+                                    com
+                                    foco na qualidade, frescor e preços acessíveis.</p>
+                            </div>
+                        </div>
+
+                        <div class="arrow" id="arrow2">▶ Nosso Compromisso</div>
+                        <div class="content" id="content2">
+                            <div class="line-vertical"></div>
+                            <div class="bgi">
+                                <ul>
+                                    <li>Atendimento personalizado e eficiente</li>
+                                    <li>Variedade de produtos frescos e de qualidade</li>
+                                    <li>Promoções e descontos frequentes</li>
+                                    <li>Preocupação com a sustentabilidade e o meio ambiente</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="arrow" id="arrow3">▶ Venha nos conhecer</div>
+
+                        <div class="content" id="content3">
+                            <div class="line-vertical"></div>
+                            <div class="bgi">
+                                <p>Visite uma de nossas lojas e descubra por que somos o supermercado preferido da sua
+                                    região.
+                                    Estamos ansiosos para recebê-lo!</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <button class="setaparaolado"></button>
-                    <div>
-                        <p>Nosso Compromisso</p>
-                    </div>
-                    <div>
-                        <ul>
-                            <li>Atendimento personalizado e eficiente</li>
-                            <li>Variedade de produtos frescos e de qualidade</li>
-                            <li>Promoções e descontos frequentes</li>
-                            <li>Preocupação com a sustentabilidade e o meio ambiente</li>
-                        </ul>
-                    </div>
-                </div>
-                <div>
-                    <button class="setaparaolado"></button>
-                    <div>
-                        <p>Venha nos conhecer</p>
-                    </div>
-                    <div>
-                        <p>Visite uma de nossas lojas e descubra por que somos o supermercado preferido da sua região.
-                            Estamos ansiosos para recebê-lo!</p>
-                    </div>
+                    <script src="JS/aparecer.js"></script>
+
+                    <aside id="asidesobre"><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
                 </div>
             </section>
-            <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
-            <aside><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
-            <section>
-                <h1>Telefone</h1>
-                <a href="tel:+55(61)985479055"></a>
-                <h1>E-mail</h1>
-                <a href="mailto:"></a>
-                <h1>Endereço</h1>
-                <address></address>
+
+
+            <section id="contatos">
+                <div id="imgcnt">
+                    <aside id="imgcnt-g"><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
+                </div>
+                <div id="titulo">
+                    <h1>contatos</h1>
+                </div>
+                <div id="telefone">
+                    <h3>Telefone</h3>
+                    <a href="tel:+55(61)99374-2005">(61)99374-2005</a>
+                </div>
+                <div id="email">
+                    <h3>E-mail</h3>
+                    <a href="mailto:Bompravoce@gmail.com">Bompravoce@gmail.com</a>
+                </div>
+                <div id="endereco">
+                    <h3>Endereço</h3>
+                    <address> Qs 118 s n cj 6 lt 2, Samambaia - DF, 72302-576</address>
+                </div>
+
             </section>
         </article>
     </main>
     <footer>
-        <h1></h1>
-        <div>
-            <img src="" alt="">
-            <p>Whatsapp</p>
-            <a href="http://">(61) 985479055</a>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Instagram</p>
-            <a href="http://">@Bompravoce</a>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Facebook</p>
-            <a href="http://">Bompravoce</a>
+        <h1>Siga-nos nas Redes sociais</h1>
+        <div class="flex">
+            <div>
+                <img src="" alt="">
+                <p>Whatsapp</p>
+                <a href="http://">(61) 99374-2005</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>Instagram</p>
+                <a href="http://">@Bompravoce</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>Facebook</p>
+                <a href="http://">Bompravoce</a>
+            </div>
         </div>
         <p>Acompanhe nossas novidades, promoções e dicas nas nossas redes sociais!</p>
-        <sub>Copyright© 2024 Vinícius Alvino</sub>
+        <sub>Copyright© <span id="ano"><span> Bom pra voce</sub>
+        <script src="JS/data.js"></script>
     </footer>
 </body>
 
